Simplify reading cached data in AbstractFileCache